Fix caption image alignment on single post

--- a/wp-content/themes/cpipr/less/style.less
+++ b/wp-content/themes/cpipr/less/style.less
@@ -944,4 +944,26 @@ form[id*=give-form] #give-final-total-wrap .give-final-total-amount {
   width: 52px;
 }
 
+/* Custom Single post entry content */
+body.normal.single-post .entry-content {
+  padding: 0 17%;
+}
+@media (max-width: 767px) {
+  body.normal.single-post .entry-content {
+    padding: 0;
+  }
+}
+
+/* Navis slideshow */
+.slick-slide img {
+  width: 100%;
+}
+
+.navis-slideshow .wp-media-credit {
+  text-align: left;
+}
+.navis-slideshow .wp-caption-text {
+  font-family: @font-family-sans-serif-condensed;
+}
+
 @import "_responsive.less";
